# othello-cli

./: .flake8  .gitignore  LICENSE  README.md  main.py  noxfile.py  pyproject.toml
.github/workflows/: release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst
docs/reference/: agents.rst  game.rst  types.rst
othello/: __init__.py  __main__.py  board.py  game.py  move.py  othello.py  player.py  point.py  stone.py
othello/agent/: __init__.py  base.py  human.py  random_bot.py
othello/game/: __init__.py  board.py  disc.py  game_state.py  move.py  player.py  point.py  stone.py
tests/: __init__.py  test_board.py  test_game.py  test_move.py  test_player.py  test_stone.py
tests/agent/: __init__.py  test_human.py  test_random_bot.py
tests/game/: __init__.py  test_board.py  test_disc.py  test_game.py  test_move.py  test_player.py  test_stone.py
