[tool.poetry]
name = "othello"
version = "0.1.0"
description = ""
authors = ["Amos Law <amos.law98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
coverage = {extras = ["toml"], version = "^5.1"}
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.770"
flake8-annotations = "^2.1.0"
pytest-mock = "^3.1.0"

[tool.poetry.scripts]
othello = "othello.__main__:main"

[tool.poetry.plugins.agents]
human = "othello.agent.human:Human"
random = "othello.agent.random_bot:RandomBot"

[tool.coverage.paths]
source = ["*/site-packages"]

[tool.coverage.run]
branch = true
source = ["othello"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
